--- a/src/styles/material-override.scss
+++ b/src/styles/material-override.scss
@@ -1,4 +1,4 @@
 .mat-mdc-card{
-    width: 250px !important;
+    width: 500px;
     
 }
